@@ -2207,14 +2207,15 @@ function cd_checkUser() {
             // generate enough bits by hashing shared secret repeatedly
             $hexToMixBits = "";
 
-            $runningSecret = sha1( $sharedEncryptionSecret );
+            $runningSecret = cd_hmac_sha1( $sharedEncryptionSecret, $email );
             while( strlen( $hexToMixBits ) < $ticketLengthBits ) {
 
                 $newBits = cd_hexDecodeToBitString( $runningSecret );
 
                 $hexToMixBits = $hexToMixBits . $newBits;
 
-                $runningSecret = sha1( $runningSecret );
+                $runningSecret = cd_hmac_sha1( $sharedEncryptionSecret,
+                                               $runningSecret );
                 }
 
             // trim down to bits that we need
